TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fix dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2012-10-15 MickeM
 * Added support for lists in targets/destination (passive checks/channels)
 * Added new --remove-defaults option when generating settings files.
   nscp settings --remove-defaults --generate
 * Added new module SimpleFileWriter for writing passive check results to files.
 * Fixed issues here and there (mainly new filtering for CheckLogFile)

2012-10-14 MickeM
 * Added support for real-time log file checks (Linux)

2012-10-07 MickeM
 * Added support for real-time log file checks (Windows)

2012-09-28 MickeM
 * Fixed NRPE and NSCA buffer issue: Invalid packet length: 1059 != 1036 configured payload is: 1024

2012-09-27 MickeM
 * Much improved CheckLogFile with warn/crit/filter concepts (currentl no real-time support)
   check_logfile debug "file=c:\\test.txt" "column-split=\\t" "filter=column1 eq '123' OR column(2) like 'bar' or column3 like 'foo'" "warn=column3 like 'foo'" "crit=column1 eq '123'"
   Use "check_logfile help" for more details

2012-09-25 MickeM
 * Initial version of CheckLogFile added (currentl no real-time support)

2012-09-23 MickeM
 * Fixed a centos (?) linkage issue with PythonScript module

2012-09-22 MickeM
 * Fixed performance data parsing for empty sections such as f=1;;;;1 will now work (and not become f=1;0;0;0;1)
 * Added unit test for perfoamnce data parsing
 * Added gtest unit test to ctest

2012-09-11 MickeM
 * Added NSCP uptime to check_nscp

2012-09-08 MickeM
 * Fixed log matching in CheckEventLog when no log was specified
 * Improved command line syntax for eventlog
 * Fixed return code issue in SimpleCache module

2012-09-08 MickeM
 * Improved command line help texts and added global --version option.
   Running nscp without options now lists all context and their use.