@@ -1,3 +1,3 @@
 version=0.4.1
-build=58
-date=2012-09-11
+build=61
+date=2012-10-24
